--- a/style.css
+++ b/style.css
@@ -6,3 +6,24 @@
   html {
     font-size: 17px;
   }
+  h1 {
+    margin-top: 10px;
+    text-align: center;
+  }
+  
+  main {
+    display: flex;
+    justify-content: space-evenly;
+    align-items: center;
+    flex-wrap: wrap;
+  }
+  
+  article {
+    max-width: 300px;
+    margin: 20px 10px 0;
+    border: 1px solid #000;
+    border-radius: 15px;
+    box-shadow: 5px 5px 10px #444;
+    position: relative; 
+    background-color: white;
+  }
