--- a/style.css
+++ b/style.css
@@ -14,7 +14,7 @@
     min-height: 100vh;
     font-family: sans-serif;
     background-color: blanchedalmond;
-    /* background-image: url('/img/background.jpg'); */
+    background-image: url('/img/bluebackground.jpg'); 
     padding: 1rem;
   }
   
@@ -87,4 +87,45 @@
     width: auto;
     margin-right: 0px;
     margin-left: auto;
+  }
+  .socialMedia {
+    padding: 5px;
+    font-size: 30px;
+    width: 30%;
+    text-align: center;
+    text-decoration: none;
+    position: fixed; 
+    bottom: 0; right: 0;
+    background-color: aliceblue;
+    color: bisque; 
+    
+  }
+  .socialMedia:hover {
+     opacity: 0.7;
+   }
+  
+   /*Background colors for each icon*/
+  
+   /*Facebook*/
+   .fa-facebook {
+     background: #3B5998;
+     color: white;
+     border-radius: 20%;
+   }
+   /* Twitter */
+  .fa-twitter {
+     background: #55ACEE;
+     color: white;
+     border-radius: 20%;
+  }
+  /*LinkedIn*/
+  .fa-linkedin{
+     background: #1565c0;
+     color: white;
+     border-radius: 20%;
+  }
+  /*Instagram*/
+  .fa-instagram{
+     background: radial-gradient(circle at 33% 100%, #fed373 4%, #f15245 30%, #d92e7f 62%, #9b36b7 85%, #515ecf);
+     border-radius: 20%;
   }
