Made a function to collect book data from a form and console log it.

--- a/style.css
+++ b/style.css
@@ -21,6 +21,7 @@
   .dark-mode {
     background-color: black;
     color: white;
+    background-image: url('/img/darkmode.png');
   }
   
   .light-mode {
