--- a/style.css
+++ b/style.css
@@ -129,3 +129,137 @@
      background: radial-gradient(circle at 33% 100%, #fed373 4%, #f15245 30%, #d92e7f 62%, #9b36b7 85%, #515ecf);
      border-radius: 20%;
   }
+
+  a,a:hover{
+    text-decoration: none;
+  }
+  ul{
+  list-style: circle;
+  }
+  
+  .header{
+  position: relative;
+  width: 100%;
+  height: 100vh;
+  background-image: url(images/photo1.jpg);
+  background-size: cover;
+  background-repeat: no-repeat; 
+  }
+  .header .navbar{
+  width: 100%;
+  height: 80px;
+  display: flex;
+  align-items: center;
+  padding-top: 20px;
+  }
+  .header .navbar .logo a{
+  color: bisque;
+  font-size: 30px;
+  margin-left: 50px;
+  }
+  .header .navbar .spread ul{
+  margin-left: 300px;
+  
+  }
+  .header .navbar .menu ul li{
+  
+  display: inline-block;
+  margin-right: 35px;
+  align-items: center;
+  padding: 20px;
+  font-size: 20;
+  }
+  .navbar a{
+  color: rgb(233, 222, 222);
+  font-size: 17px;
+  font-weight: 500;
+  letter-spacing: 1px;
+  }
+  .header .contact-info{
+  margin-left: 400px;
+  }
+  .header .contact-info ul{
+  margin-left: 41px;
+  }
+  .header .contact-info {
+  display: inline-block;
+  }
+  .header .contact-info a{
+  color: rgb(233, 222, 222);
+  font-size: 17px;
+  transition: all 0.3s;
+  }
+  .header .contact-info  a:hover{
+  color: aqua;
+  }  
+  .header .contact-info  a.sep {
+  margin: 0 40px;
+  opacity: 0.3;
+  }
+
+  a,a:hover{
+    text-decoration: none;
+  }
+  ul{
+  list-style: circle;
+  }
+  
+  .header{
+  position: relative;
+  width: 100%;
+  height: 100vh;
+  background-image: url(images/photo1.jpg);
+  background-size: cover;
+  background-repeat: no-repeat; 
+  }
+  .header .navbar{
+  width: 100%;
+  height: 80px;
+  display: flex;
+  align-items: center;
+  padding-top: 20px;
+  }
+  .header .navbar .logo a{
+  color: bisque;
+  font-size: 30px;
+  margin-left: 50px;
+  }
+  .header .navbar .spread ul{
+  margin-left: 300px;
+  
+  }
+  .header .navbar .menu ul li{
+  
+  display: inline-block;
+  margin-right: 35px;
+  align-items: center;
+  padding: 20px;
+  font-size: 20;
+  }
+  .navbar a{
+  color: rgb(233, 222, 222);
+  font-size: 17px;
+  font-weight: 500;
+  letter-spacing: 1px;
+  }
+  .header .contact-info{
+  margin-left: 400px;
+  }
+  .header .contact-info ul{
+  margin-left: 41px;
+  }
+  .header .contact-info {
+  display: inline-block;
+  }
+  .header .contact-info a{
+  color: rgb(233, 222, 222);
+  font-size: 17px;
+  transition: all 0.3s;
+  }
+  .header .contact-info  a:hover{
+  color: aqua;
+  }  
+  .header .contact-info  a.sep {
+  margin: 0 40px;
+  opacity: 0.3;
+  }
